Compiler/tests/syntax/good/testfile-len-1.rs
fn main() { let v : Vec<i32> = vec![1,2,3]; let x : i32 = v . len (); return; }
