Compiler/tests/syntax/bad/testfile-comments-3.rs

fn main() { let x = 1/// comment starts at first /, not second
        1; }
